--- a/resources/view/image_view_scene_view.fxml
+++ b/resources/view/image_view_scene_view.fxml
@@ -1,166 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<?import java.lang.Double?>
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-          prefWidth="1051.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="presentation.controller.ImageViewSceneController">
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.ImageViewSceneController">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="510.0" minWidth="10.0" prefWidth="488.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="607.0" minWidth="10.0" prefWidth="431.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="132.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="510.0" minWidth="10.0" prefWidth="488.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="607.0" minWidth="10.0" prefWidth="431.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="132.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
         <Pane>
             <children>
                 <Pane fx:id="imgViewPane">
                     <children>
-                        <ImageView fx:id="imageView" pickOnBounds="true" preserveRatio="true"/>
+                        <ImageView fx:id="imageView" pickOnBounds="true" preserveRatio="true" />
                     </children>
                 </Pane>
             </children>
         </Pane>
         <Pane GridPane.columnIndex="1">
             <children>
-                <ImageView fx:id="modifiedImageView" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fx:id="modifiedImageView" pickOnBounds="true" preserveRatio="true" />
             </children>
         </Pane>
         <VBox alignment="CENTER" GridPane.columnIndex="2">
             <children>
-                <Pane>
+                <Pane prefHeight="130.0" prefWidth="132.0">
                     <children>
-                        <Region VBox.vgrow="ALWAYS">
-                            <maxHeight>
-                                <Double fx:constant="MAX_VALUE"/>
-                            </maxHeight>
-                        </Region>
-                        <RadioButton fx:id="originalRadio" layoutX="12.0" layoutY="6.0" mnemonicParsing="false"
-                                     selected="true" text="Original">
-                            <toggleGroup>
-                                <ToggleGroup fx:id="imageSelector"/>
-                            </toggleGroup>
-                        </RadioButton>
-                        <Region VBox.vgrow="ALWAYS">
-                            <maxHeight>
-                                <Double fx:constant="MAX_VALUE"/>
-                            </maxHeight>
-                        </Region>
-                        <RadioButton fx:id="modifiedRadio" layoutX="12.0" layoutY="29.0" mnemonicParsing="false"
-                                     text="Modificada" toggleGroup="$imageSelector"/>
+                        <Label alignment="CENTER" layoutX="48.0" text="Pixeles" textAlignment="CENTER" />
+                          <Pane layoutY="17.0" prefHeight="67.0" prefWidth="132.0">
+                     <children>
+                              <GridPane alignment="CENTER" prefHeight="66.0" prefWidth="132.0">
+                                  <columnConstraints>
+                                      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="95.0" minWidth="10.0" />
+                                      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="150.0" minWidth="10.0" />
+                                  </columnConstraints>
+                                  <rowConstraints>
+                                      <RowConstraints maxHeight="45.0" minHeight="10.0" vgrow="ALWAYS" />
+                                      <RowConstraints maxHeight="31.0" minHeight="10.0" vgrow="ALWAYS" />
+                                  </rowConstraints>
+                                  <children>
+                                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="24.0" text="X" textAlignment="CENTER" />
+                                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="30.0" text="Y" GridPane.columnIndex="1" />
+                                      <TextField fx:id="pixelX" alignment="CENTER" prefHeight="27.0" prefWidth="17.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                 <GridPane.margin>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </GridPane.margin>
+                              </TextField>
+                                      <TextField fx:id="pixelY" alignment="CENTER" prefHeight="27.0" prefWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </GridPane.margin>
+                              </TextField>
+                                  </children>
+                              </GridPane>
+                     </children>
+                          </Pane>
+                  <Button alignment="CENTER" layoutX="28.0" layoutY="89.0" mnemonicParsing="false" onAction="#calculatePixelValue" text="Calcular" />
                     </children>
                 </Pane>
-                <Pane prefHeight="67.0" prefWidth="132.0">
+                <Pane prefHeight="209.0" prefWidth="132.0">
                     <children>
-                        <Label alignment="CENTER" layoutX="48.0" text="Pixeles" textAlignment="CENTER"/>
-                        <GridPane layoutX="17.0" layoutY="18.0">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="ALWAYS" maxWidth="95.0" minWidth="10.0"/>
-                                <ColumnConstraints hgrow="ALWAYS" maxWidth="150.0" minWidth="10.0"/>
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints maxHeight="45.0" minHeight="10.0" vgrow="ALWAYS"/>
-                                <RowConstraints maxHeight="31.0" minHeight="10.0" vgrow="ALWAYS"/>
-                            </rowConstraints>
-                            <children>
-                                <Pane>
-                                    <children>
-                                        <Label contentDisplay="CENTER" text="X" textAlignment="CENTER"/>
-                                    </children>
-                                </Pane>
-                                <Pane GridPane.columnIndex="1">
-                                    <children>
-                                        <Label prefHeight="17.0" prefWidth="50.0" text="Y"/>
-                                    </children>
-                                </Pane>
-                                <TextField fx:id="pixelX" prefHeight="27.0" prefWidth="52.0" GridPane.rowIndex="1"/>
-                                <TextField fx:id="pixelY" prefHeight="27.0" prefWidth="0.0" GridPane.columnIndex="1"
-                                           GridPane.rowIndex="1"/>
-                            </children>
-                        </GridPane>
-                    </children>
-                </Pane>
-                <Pane>
-                    <children>
-                        <TextField fx:id="pixelValue" layoutX="26.0" layoutY="52.0" prefHeight="27.0" prefWidth="67.0"/>
-                        <Label alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="46.0" layoutY="35.0"
-                               text="Valor" textAlignment="CENTER"/>
-                        <Button layoutX="27.0" layoutY="5.0" mnemonicParsing="false" onAction="#calculatePixelValue"
-                                text="Calcular"/>
-                    </children>
-                </Pane>
-                <Pane prefHeight="200.0" prefWidth="132.0">
-                    <children>
-                        <Label layoutX="20.0" layoutY="2.0" text="Valores - RGB"/>
-                        <Pane layoutX="20.0" layoutY="114.0" prefHeight="94.0" prefWidth="101.0">
-                            <children>
-                                <GridPane prefHeight="90.0" prefWidth="76.0">
-                                    <columnConstraints>
-                                        <ColumnConstraints halignment="CENTER" minWidth="10.0" prefWidth="100.0"/>
-                                    </columnConstraints>
-                                    <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                    </rowConstraints>
-                                    <children>
-                                        <Button mnemonicParsing="false" onAction="#modifyPixelValue" text="Modificar"/>
-                                        <Label text="Nuevo valor" GridPane.rowIndex="1"/>
-                                        <TextField fx:id="newPixelValue" prefHeight="27.0" prefWidth="57.0"
-                                                   GridPane.rowIndex="2"/>
-                                    </children>
-                                </GridPane>
-                            </children>
-                        </Pane>
-                        <Pane layoutX="22.0" layoutY="28.0" prefHeight="94.0" prefWidth="104.0">
-                            <children>
-                                <Pane layoutX="20.0" layoutY="1.0" prefHeight="95.0" prefWidth="15.0">
-                                    <children>
-                                        <GridPane prefHeight="74.0" prefWidth="14.0">
-                                            <columnConstraints>
-                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                            </rowConstraints>
-                                            <children>
-                                                <Label text="R"/>
-                                                <Label text="G" GridPane.rowIndex="1"/>
-                                                <Label prefHeight="15.0" prefWidth="9.0" text="B"
-                                                       GridPane.rowIndex="2"/>
-                                            </children>
-                                        </GridPane>
-                                    </children>
-                                </Pane>
-                                <Pane layoutX="41.0" layoutY="-3.0" prefHeight="90.0" prefWidth="51.0">
-                                    <children>
-                                        <GridPane prefHeight="90.0" prefWidth="49.0">
-                                            <columnConstraints>
-                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                            </rowConstraints>
-                                            <children>
-                                                <TextField fx:id="pixelRValue" prefHeight="18.0" prefWidth="49.0"/>
-                                                <TextField fx:id="pixelGValue" prefHeight="27.0" prefWidth="67.0"
-                                                           GridPane.rowIndex="2"/>
-                                                <TextField fx:id="pixelBValue" prefHeight="27.0" prefWidth="67.0"
-                                                           GridPane.rowIndex="1"/>
-                                            </children>
-                                        </GridPane>
-                                    </children>
-                                </Pane>
-                            </children>
-                        </Pane>
+                  <Pane layoutX="19.0" layoutY="134.0" prefHeight="67.0" prefWidth="102.0">
+                     <children>
+                              <TextField fx:id="pixelValueModified" editable="false" layoutX="18.0" layoutY="40.0" prefHeight="27.0" prefWidth="67.0" />
+                              <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="14.0" text="Valor Modificado" textAlignment="CENTER" />
+                     </children>
+                  </Pane>
+                  <Pane layoutX="14.0" layoutY="14.0" prefHeight="66.0" prefWidth="112.0">
+                     <children>
+                        <TextField fx:id="pixelValue" editable="false" layoutX="23.0" layoutY="33.0" prefHeight="27.0" prefWidth="67.0" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="6.0" text="Valor Original" textAlignment="CENTER" />
+                     </children>
+                  </Pane>
+                            <Button alignment="CENTER" layoutX="28.0" layoutY="100.0" mnemonicParsing="false" onAction="#modifyPixelValue" text="Modificar" />
                     </children>
                 </Pane>
             </children>
