--- a/resources/view/menu_scene_view.fxml
+++ b/resources/view/menu_scene_view.fxml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="presentation.controller.MenuSceneController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<AnchorPane xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.MenuSceneController">
     <children>
-        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-                  prefHeight="401.0" prefWidth="603.0">
+        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="603.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="603.0" minWidth="10.0" prefWidth="603.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="0.0" prefWidth="0.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="603.0" minWidth="10.0" prefWidth="603.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="0.0" prefWidth="0.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="268.0" minHeight="10.0" prefHeight="268.0" vgrow="SOMETIMES"/>
-                <RowConstraints maxHeight="127.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints maxHeight="268.0" minHeight="10.0" prefHeight="268.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="127.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <Pane prefHeight="200.0" prefWidth="200.0">
                     <children>
                         <Pane layoutX="48.0" layoutY="58.0">
                             <children>
-                                <Button layoutX="48.0" layoutY="58.0" mnemonicParsing="false" onAction="#loadImage"
-                                        text="Cargar imagen"/>
-                                <ComboBox fx:id="imageComboBox" layoutX="181.0" layoutY="58.0" prefWidth="90.0"
-                                          promptText="choose">
+                                <Button layoutX="48.0" layoutY="58.0" mnemonicParsing="false" onAction="#loadImage" text="Cargar imagen" />
+                                <ComboBox fx:id="imageComboBox" layoutX="181.0" layoutY="58.0" prefHeight="27.0" prefWidth="114.0" promptText="choose">
                                 </ComboBox>
-                                <Button layoutX="181.0" layoutY="99.0" mnemonicParsing="false" onAction="#saveImage"
-                                        text="Guardar imagen"/>
-                                <Button layoutX="48.0" layoutY="99.0" mnemonicParsing="false" onAction="#showImage"
-                                        text="Mostrar imagen"/>
+                                <Button layoutX="181.0" layoutY="99.0" mnemonicParsing="false" onAction="#saveImage" text="Guardar imagen" />
+                                <Button layoutX="48.0" layoutY="99.0" mnemonicParsing="false" onAction="#showImage" text="Mostrar imagen" />
                             </children>
                         </Pane>
                     </children>
@@ -38,23 +38,19 @@
                     <children>
                         <GridPane layoutY="-19.0" prefHeight="25.0" prefWidth="603.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             </columnConstraints>
                             <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
                                 <Pane prefHeight="25.0" prefWidth="236.0">
                                     <children>
-                                        <Button contentDisplay="CENTER" layoutX="35.0" mnemonicParsing="false"
-                                                onAction="#onClickButtonTP1" text="TP 1" textAlignment="CENTER"/>
-                                        <Button layoutX="84.0" mnemonicParsing="false" onAction="#onClickButtonTP2"
-                                                text="TP2"/>
-                                        <Button layoutX="129.0" mnemonicParsing="false" onAction="#onClickButtonTP3"
-                                                text="TP3"/>
-                                        <Button layoutX="174.0" mnemonicParsing="false" onAction="#onClickButtonTP4"
-                                                text="TP4"/>
+                                        <Button contentDisplay="CENTER" layoutX="35.0" mnemonicParsing="false" onAction="#onClickButtonTP1" text="TP 1" textAlignment="CENTER" />
+                                        <Button layoutX="84.0" mnemonicParsing="false" onAction="#onClickButtonTP2" text="TP2" />
+                                        <Button layoutX="129.0" mnemonicParsing="false" onAction="#onClickButtonTP3" text="TP3" />
+                                        <Button layoutX="174.0" mnemonicParsing="false" onAction="#onClickButtonTP4" text="TP4" />
                                     </children>
                                 </Pane>
                             </children>
