--- a/resources/view/menu_scene_view.fxml
+++ b/resources/view/menu_scene_view.fxml
@@ -49,7 +49,7 @@
                      </font>
                   </Label>
                   <Button layoutX="33.0" layoutY="43.0" mnemonicParsing="false" onAction="#showGreyGradient" text="Degradee grises" />
-                  <Button layoutX="154.0" layoutY="43.0" mnemonicParsing="false" text="Degradee colores" />
+                  <Button layoutX="154.0" layoutY="43.0" mnemonicParsing="false" onAction="#showColorGradient" text="Degradee colores" />
                   <Button layoutX="282.0" layoutY="43.0" mnemonicParsing="false" text="Circulo blanco" />
                   <Button layoutX="393.0" layoutY="43.0" mnemonicParsing="false" text="Cuadrado blanco" />
                </children>
